--- a/order/style.css
+++ b/order/style.css
@@ -17,6 +17,21 @@
 	font-family: 'Nunito', sans-serif;
 }
 
+.form .left {
+	position: absolute;
+	left: -50%;
+}
+
+.form .top {
+	position: absolute;
+	top: 2%;
+}
+
+.form .title {
+	position: absolute;
+	text-decoration: underline;
+}
+
 .form form {
 	position: absolute;
 	top: 50%;
@@ -34,14 +49,30 @@
 	border-radius: 5px 5px 0 0;
 	font-size: 15px;
 	cursor: text;
-	border-bottom: 1px solid rgba(255,255,255,.5);
+	border-bottom: 1px solid red;
 	color-scheme: dark;
 	background: #ffffff11;
 }
 
-.form .input:focus {
-	border-bottom: 1px solid white;
+/*.input-pass {
+	background: none;
+	outline: none;
+	border: 0px;
+	width: 80%;
+	height: 5%;
+	color: white;
+	padding: 7px;
+	border-radius: 5px 5px 0 0;
+	font-size: 15px;
+	cursor: text;
+	color-scheme: dark;
+	background: #ffffff11;
+	border-bottom: 1px solid red;
 }
+
+.form .input-pass:focus {
+	border-bottom: 1px solid white;
+}*/
 
 .form select {
 	-webkit-appearance: none;
@@ -58,11 +89,12 @@
 	width: 83%;
 	height: 10%;
 	overflow: hidden;
+	border-bottom-color: red;
 }
 
 .form select option {
 	background: #222427;
-	color: rgba(255,255,255,.6);
+	color: white;
 	border: none;
 }
 
